# libdseed

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  dseed.pc.in
app/test/: test.cpp
app/test_app/: app.appxmanifest.in  app.manifest  test.cpp
app/test_audio/: test.cpp
app/test_basic_window/: test_basic_window.cpp
app/test_bitmap/: test.cpp
app/test_simd/: test.cpp
cmake/: detect_libraries.cmake  detect_target.cmake
include/: dcolor.h  dmath.collision.inl  dmath.color.inl  dmath.h  dmath.simd.inl  dmath.vector.inl  dseed.h
include/dseed/: color.h  common.h  dcolor.h  dcommon.h  ddiagnostics.h  dgeometry.h  dhid.h  diagnostics.h  dio.h  dmath.collision.inl  dmath.h  dmath.simd.inl  dmath.vector.inl  dobject.h  dparallel.h  dstring.h  dtime.h  extra.h  geometry.h  hid.h  io.h  object.h  parallel.h  string.h  strings.h  time.h
include/dseed/audio/: audio.h
include/dseed/bitmap/: bitmap.decoders.h  bitmap.encoders.h  bitmap.h  decoders.h  encoders.h
include/dseed/diagnostics/: diagnostics.h
include/dseed/graphics/: graphics.d3d11.h  graphics.dxgi.h  graphics.h  graphics.vk.h
include/dseed/io/: input.h  stream.h
include/dseed/math/: fraction.h  geometry.h  half.h  int24.h  math.collision.inl  math.h  math.simd.inl  math.vector.inl  mathes.h
include/dseed/math/simd/: math.simd.arm.inl  math.simd.neon.inl  math.simd.nosimd.conv.inl  math.simd.nosimd.inl  math.simd.nosimd.vector8f.inl  math.simd.nosimd.vector8i.inl  math.simd.nosimd.vectorf.inl  math.simd.nosimd.vectori.inl  math.simd.x86.inl
include/dseed/math/vectors/: simd.arithmetic.inl  simd.arm.h  simd.bit.inl  simd.cast.inl  simd.compare.inl  simd.constructors.inl  simd.def.h  simd.functions.inl  simd.h  simd.length.inl  simd.matrixfuncs.inl  simd.normalize.inl  simd.product.inl  simd.shuffle.inl  simd.x86.h  (+2 more)
include/dseed/media/: decoders.h  encoders.h  media.decoders.h  media.encoders.h  media.h
include/dseed/platform/: platform.h
sample/bitmaps/: sample1.10x8.astc  sample1.12x12.astc  sample1.4x4.astc  sample1.8x8.astc  sample1.bc1.dds  sample1.bc2.dds  sample1.bc3.dds  sample1.bc4.dds  sample1.bc5.dds  sample1.bc6h.dds  sample1.bc7.dds  sample1.bgra4444.dds  sample1.etc  sample1.etc1.ktx  sample1.etc2.rgba.ktx  sample1.etc2.srgb.ktx  sample1.hdp  sample1.jp2  sample1.tga  sample1.tif
src/: color.cpp  common.cpp  dcolor.cpp  ddiagnostics.cpp  dgeometry.cpp  dhid.cpp  diagnostics.cpp  dio.cpp  dmath.cpp  dobject.cpp  dparallel.cpp  dseed.blob.cpp  dseed.cpp  dseed.geometry.cpp  dseed.lock.cpp  dseed.math.cpp  dseed.stream.cpp  dseed.string.cpp  dseed.time.cpp  dstring.cpp  extra.cpp  io.cpp  object.cpp  parallel.cpp  string.cpp  strings.cpp  time.cpp
src/Microsoft/: DDSCommon.hxx  DIBCommon.hxx  IStreamHelper.hxx  WaveFileHelper.hxx  WaveFormatHelper.hxx
src/audio/: audio_wasapi_adapter.cpp  audio_wasapi_requester.cpp  audio_xaudio2_player.cpp
src/bitmap/: bitmap.cpp  bitmap.decoder.dds.cpp  bitmap.decoder.hxx  bitmap.decoder.ktx.cpp  bitmap.decoder.pkm.cpp  bitmap.decoder.wic.cpp  bitmap.filter.cpp  bitmap.flip.cpp  bitmap.histogram.cpp  bitmap.misc.cpp  bitmap.operation.cpp  bitmap.reformat.cpp  bitmap.resize.cpp  bitmap_determine.cpp  bitmap_element.cpp  bitmap_filter.cpp  bitmap_flip.cpp  bitmap_histogram.cpp  bitmap_operation.cpp  bitmap_reformat.cpp  bitmap_resize.cpp
src/bitmap/decoders/: astc_decoder.cpp  bitmap.decoder.astc.cpp  bitmap.decoder.dds.cpp  bitmap.decoder.dib.cpp  bitmap.decoder.gif.cpp  bitmap.decoder.hxx  bitmap.decoder.ico.cur.cpp  bitmap.decoder.jp2.cpp  bitmap.decoder.jpeg.cpp  bitmap.decoder.ktx.cpp  bitmap.decoder.pkm.cpp  bitmap.decoder.png.cpp  bitmap.decoder.tga.cpp  bitmap.decoder.tiff.cpp  bitmap.decoder.webp.cpp  bitmap.decoder.wic.cpp  common.hxx  dds_decoder.cpp  dib_decoder.cpp  gif_decoder.cpp  ico_decoder.cpp  jp2_decoder.cpp  jpeg_decoder.cpp  ktx_decoder.cpp  pkm_decoder.cpp  png_decoder.cpp  tga_decoder.cpp  tiff_decoder.cpp  webp_decoder.cpp  wic_decoder.cpp
src/bitmap/encoders/: bitmap.encoder.dds.cpp  bitmap.encoder.dib.cpp  bitmap.encoder.gif.cpp  bitmap.encoder.ico.cur.cpp  bitmap.encoder.jpeg.cpp  bitmap.encoder.png.cpp  bitmap.encoder.webp.cpp  dds_encoder.cpp  dib_encoder.cpp  gif_encoder.cpp  ico_encoder.cpp  jpeg_encoder.cpp  png_encoder.cpp  tiff_encoder.cpp  webp_encoder.cpp  wic_encoder.cpp
src/diagnostics/: diagnostics.cpp
src/dr_libs/: dr_wav.h
src/etc1_utils/: etc1_utils.c  etc1_utils.h
src/graphics/: common_d3d11.hxx  common_dxgi.hxx  d3d11_sprite.hxx  graphics.d3d11.cpp  graphics.dxgi.common.h  graphics.dxgi.cpp  graphics_d3d11.cpp  graphics_d3d11_sprite.cpp  graphics_dxgi.cpp
src/instructions/: instruction_info.cpp  utility_instructions.cpp
src/io/: stream.cpp
src/libs/: AudEarTypeConverter.hxx  DDSHelper.hxx  DIBHelper.hxx  ICOHelper.hxx  IStreamHelper.hxx  MicrosoftHelper.hxx  WAVHelper.hxx
src/libs/AudEar/: TypeConverter.hpp
src/libs/Microsoft/: DDSCommon.hxx  ICOCURCommon.hxx  IStreamHelper.hxx
src/libs/opusfile/: AUTHORS  http.c
src/math/: fraction.cpp  half.cpp  int24.cpp  math.cpp
src/media/: audio.cpp  audio.filter.cpp  audio.rechannel.cpp  audio.reformat.cpp  audio.resample.cpp  audio.spectrum.cpp  audio_filter.cpp  audio_rechannel.cpp  audio_reformat.cpp  audio_resample.cpp  audio_spectrum.cpp  audio_stream.cpp  media.cpp  media.decoder.mf.cpp
src/media/decoders/: common.hxx  flac_decoder.cpp  media.decoder.flac.cpp  media.decoder.hxx  media.decoder.mf.cpp  media.decoder.mp3.cpp  media.decoder.opus.cpp  media.decoder.vorbis.cpp  media.decoder.wav.cpp  mf_decoder.cpp  mp3_decoder.cpp  opus_decoder.cpp  vorbis_decoder.cpp  wav_decoder.cpp
src/media/encoders/: media.encoder.wav.cpp  wav_encoder.cpp
src/media/streams/: media.audiostream.basic.cpp  media.audiostream.filter.cpp
src/platform/: common.hxx  platform.android.cpp  platform.cpp  platform.desktop.cpp  platform.internal.h  platform.ios.mm  platform.macos.mm  platform.uwp.cpp  platform.win32.cpp  platform_android.cpp  platform_ios.mm  platform_linux.cpp  platform_macos.mm  platform_uwp.cpp  platform_windows.cpp
(+2 files in other folders)
